# flac123

./: .project  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  README.remote  aclocal.m4  configure  configure.ac  configure.in  get_version.sh
debian/: changelog.in  control.in  docs
flac123/: AUTHORS  BUGS  Makefile.am  README  README.remote  acinclude.m4  configure  configure.ac  flac123.c  remote.c  version.h  vorbiscomment.c
old/: Makefile  metadata
old/debian/: changelog.in  control.in  docs
old/website/: index.html
src/: Makefile.am  Makefile.in  flac123.1  flac123.c  flac123.h  remote.c  version.h  vorbiscomment.c
